Fixed white space problem

--- a/Style.css
+++ b/Style.css
@@ -31,6 +31,7 @@ ul#navigation a:hover
 li
 {
 	background-color:white;
+	width:50%;
 }
 
 table
@@ -50,7 +51,8 @@ table#neg, td#neg, th#neg, tr#neg
 	border:2px solid red;
 }
 
-p{
+.text
+{
 	color:black;
 	background-color:white;
 }
